--- a/server/MlExternalUsers/microSite/views/about.pug
+++ b/server/MlExternalUsers/microSite/views/about.pug
@@ -13,6 +13,7 @@ html
     link(rel='canonical', href='https://moolya.global')
     link(rel='publisher', href='moolya')
 
+    meta(property='fb:app_id', content='328947447490953')
     meta(property='og:locale', content='en_US')
     meta(property='og:type', content='website')
     meta(property='og:title', content=title)
@@ -20,9 +21,7 @@ html
     meta(property='og:url', content=currentUrl)
     meta(property='og:image:secure_url', content=profilePic)
     meta(property='og:image:alt', content=displayName)
-
-    meta(property='og:site_name', content='')
-    meta(property='fb:app_id', content='328947447490953')
+    meta(property='og:site_name', content='moolya')
 
 
     meta(name='twitter:card', content='summary')
@@ -89,6 +88,10 @@ html
                 li
                   a.customer.share(href='https://plus.google.com/share?url='+currentUrl+'')
                     i.fa.fa-google-plus(aria-hidden='true' alt="Share on Google+")
+                //li
+                //  a(href='https://web.whatsapp.com/send?text='+currentUrl+'' data-action="share/whatsapp/share")
+                //    i.fa.fa-whatsapp(aria-hidden='true')
+
       .ms_content_wrap
         .content_left
           .profile_pic
