--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -100,7 +100,7 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;margin: 0px;l
 .admin_main_wrap .form-control {height:38px;}
 .admin_main_wrap .form-control:focus {border-color: #FFC20E;}
 
-.cluster_status{width: 15px;height: 15px;position: absolute;right: 2px;top: 2px;z-index: 2;border-radius: 50%;line-height: 23px;}
+.cluster_status{width: 15px;height: 15px;position: absolute;left: 2px;top: 2px;z-index: 2;border-radius: 50%;line-height: 23px;}
 .list_block .list-moolya-icon .ml{position: absolute; color: #ef4647; font-size: 20px; top: 1px; z-index: 9999; left: 5px; line-height: normal; text-shadow: none;}
 .cluster_flag{width: 35px;background: #ccc;height: 22px;position: absolute;z-index: 3;margin: 2px;border-radius: 4px;    background-repeat: no-repeat;background-size: contain;background-position: center center;}
 .cluster_status.active_cl{color: #fff;background: #4cae4c; font-size: 14px;}
@@ -1120,7 +1120,7 @@ textarea.comment-input-box{border: 2px solid #ddd; border-radius: 4px; margin-bo
 
 
 .list_block .fa.fa-lock {position: absolute;left:4px;top:2px; font-size: 18px; color: #ee4847}
-.list_block .fa.fa-unlock {position: absolute;left:4px;top:2px; font-size: 18px; color: #273545}
+.list_block .fa.fa-unlock {position: absolute;right:4px;top:2px; font-size: 18px; color: #273545}
 
 .inputfile{width:.1px;height:.1px;opacity:0;overflow:hidden;position:absolute;z-index:-1}
 .inputfile + label{max-width:100%;text-overflow:ellipsis;white-space:nowrap;cursor:pointer;display:inline-block;overflow:hidden;padding:.625rem 1.25rem}
