Moolya:2604 Issue Fixed

--- a/client/stylesheets/css/mymoolya-icons.css
+++ b/client/stylesheets/css/mymoolya-icons.css
@@ -13,7 +13,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.my-ml-public_profile:before {
+  content: "\e9f9";
+}
 .my-ml-pending_registrations:before {
   content: "\e9f5";
 }
