--- a/client/stylesheets/css/react-select.css
+++ b/client/stylesheets/css/react-select.css
@@ -15,7 +15,7 @@
   box-sizing: border-box;
 }
 .Select.is-disabled > .Select-control {
-  background-color: #f9f9f9;
+  /*background-color: #f9f9f9;*/
 }
 .Select.is-disabled > .Select-control:hover {
   box-shadow: none;
