--- a/client/stylesheets/css/annotator.css
+++ b/client/stylesheets/css/annotator.css
@@ -37,6 +37,7 @@
     background: rgba(255, 255, 10, 0.4);
     border-bottom: 1px dotted #ef4647;
     padding-bottom: 2px;
+  cursor: pointer;
 }
 
 .annotator-wrapper {
@@ -218,7 +219,7 @@
     padding-bottom: 5px;
     color: #3c3c3c;
     font-size: 14px;
-    
+
     line-height: 1.3;
     border-top: 0
 }
@@ -385,7 +386,7 @@
     font-weight: bold;
     border: 1px solid #273545;
     background-color: #273545;
-    
+
     /*background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), color-stop(0.5, #d2d2d2), color-stop(0.5, #bebebe), to(#d2d2d2));
     background-image: -moz-linear-gradient(-90deg, #f5f5f5, #d2d2d2 50%, #bebebe 50%, #d2d2d2);
     background-image: -webkit-linear-gradient(-90deg, #f5f5f5, #d2d2d2 50%, #bebebe 50%, #d2d2d2);
@@ -721,5 +722,5 @@
 }
 
 /*.annotator-editor .annotator-item:first-child textarea{height: 50px;min-height: 50px;}
-.annotator-widget{background-color: #fff; border: 1px solid #ffe144;} 
+.annotator-widget{background-color: #fff; border: 1px solid #ffe144;}
 .annotator-editor .annotator-controls{background-image: none;border-top: 1px solid #ffe144; background-color: #ffe144;}*/
