Bug Fixed: Length undefined and Route Issue

--- a/private/microSite/views/looking_for.pug
+++ b/private/microSite/views/looking_for.pug
@@ -1,4 +1,4 @@
-if (lookingForDescription.length > 0)
+if (lookingForDescription &&  lookingForDescription.length > 0)
   p
     | #{lookingForDescription}
 else
