--- a/private/microSite/views/management.pug
+++ b/private/microSite/views/management.pug
@@ -1,5 +1,5 @@
 if(!privateFields.management)
-  if(management.length >0)
+  if(management && management.length >0)
     .ms_swiper
       .swiper-container
         .swiper-wrapper
