--- a/private/microSite/views/branches.pug
+++ b/private/microSite/views/branches.pug
@@ -1,12 +1,11 @@
-if(branches.length > 0)
+if(branches && branches.length > 0)
   .ms_branches
-    if(branches.length>0)
-      each branch, i in branches
-        .branch_block
-          img(src=branch.branches_logo?branch.branches_logo:'/images/branch_img.png')
-          h3 #{branch.name}
-          p
-            | #{branch.addr1}, #{branch.addr2}, #{branch.area} ,#{branch.city}, #{branch.state}, #{branch.country}
+    each branch, i in branches
+      .branch_block
+        img(src=branch.branches_logo?branch.branches_logo:'/images/branch_img.png')
+        h3 #{branch.name}
+        p
+          | #{branch.addr1}, #{branch.addr2}, #{branch.area} ,#{branch.city}, #{branch.state}, #{branch.country}
 else
   .ms_noBranches
     img(src='/images/branches_banner.png')
