--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2306,6 +2306,23 @@ p{margin-top:10px;}
   text-align: center;
 }
 
+.btn-group.selectedDay{ box-shadow: 0px 0px 5px #333; border-radius:5px;}
+li.sameWorkTime{position: relative;}
+li.sameWorkTime:after {
+  position: absolute;
+  right: 2px;
+  top: 50%;
+  transform: translateY(-50%);
+  content: '✓';
+  display: block;
+  color: #ffffff;
+  font-size: 15px;
+  line-height: 19px;
+  text-align: center;
+  text-shadow: 0 0 0.0714em #73994d;
+  font-weight: 700;
+}
+
 .add_task {margin-top: 0px;
   .ml-plus {line-height: 158px; color:#b9c5cc;font-size: 75px;background:none;border:0px;padding:0px; }
 }
