--- a/client/stylesheets/login.css
+++ b/client/stylesheets/login.css
@@ -74,3 +74,6 @@ video::-webkit-media-controls-enclosure {
 video::-webkit-media-controls-panel {
   width: calc(100% + 30px);
 }
+
+
+@media only screen and (width: 1024px ){.logout .logout_message{width:60%;}}
