--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -1,5 +1,5 @@
 doctype html
-html
+html(prefix='og: http://ogp.me/ns#')
   mixin space()
     | !{' '}
   head
@@ -19,13 +19,16 @@ html
     meta(property='og:title', content=title?title.substr(0,60):'')
     meta(property='og:description', content=desc)
     meta(property='og:url', content=currentUrl)
+    meta(property='og:image', content=profilePic)
+    meta(property='og:image:width', content='250')
+    meta(property='og:image:height', content='250')
     meta(property='og:image:secure_url', content=profilePic)
     meta(property='og:image:alt', content=displayName)
     meta(property='og:site_name', content='moolya')
 
 
     meta(name='twitter:card', content='summary')
-    meta(name='twitter:description', content=desc)
+    meta(name='twitter:description', content=desc?desc:'No Description')
     meta(name='twitter:title', content=title?title.substr(0,60):'')
     meta(name='twitter:site', content=twitterHandle)
     meta(name='twitter:creator', content='moolya')
