Microsite: Fixed hypen issue

--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -63,8 +63,9 @@ html(prefix='og: http://ogp.me/ns#')
     .ms_main_wrap
       .ms_header
         .header_left
+          a(href='https://www.moolya.global/')
+            img(src='/images/logo.png')
           .shape1
-          img(src='/images/logo.png')
         .header_right
           img(src='/images/ecosystem.png')
           img(src='/images/patent.png')
