--- a/public/css/ms_styles.css
+++ b/public/css/ms_styles.css
@@ -4,13 +4,13 @@
 *{margin: 0px;padding: 0px;}
 ul,ol,li{list-style:none;}
 html, body{height:100%;}
-body{font-family: 'DINPro-Regular';font-size:14px;background:#fff url(../images/bg.png);letter-spacing:0.5; min-height: 100%; position: relative; padding-bottom: 130px; box-sizing: border-box; height: auto !important;}
+body{font-family: 'DINPro-Regular';font-size:14px;background:#fff url(../images/bg.png);letter-spacing:0.5;min-height: 100%;position: relative;padding-bottom: 83px;box-sizing: border-box;height: 100% !important;}
 input, textarea{font-family: 'DINPro-Regular';font-size:15px;}
 input:focus, textarea:focus{outline:0px;}
 h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;}
 * {padding: 0px; margin: 0px;}
 .clear {display: inline-block; clear: both;}
-.ms_main_wrap {margin:0 auto;}
+.ms_main_wrap {margin:0 auto;height: 100%;}
 .ms_header{height: 75px;background: #000;position: relative;}
 .ms_header .shape1{background-color: #000;width: 65px;height: 100%;position: absolute;right: -20px;top: 0;-webkit-transform: skewX(-30deg);-moz-transform: skewX(-30deg);-o-transform: skewX(-30deg);-ms-transform: skewX(-30deg);transform: skewX(-30deg);}
 .ms_header .header_left{float: left;width: 40%;position: relative;height: 75px;}
@@ -30,20 +30,24 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;}
 .header_right .ms_social_wrap .ms_socialNetworks ul li a {display: block; padding: 0 3px; font-size: 20px; color: #6f6854;}
 .header_right .ms_social_wrap .ms_socialNetworks ul li a:hover {color: #ef4647;}
 
-.ms_content_wrap {display: inline-block; width:100%;}
-.ms_content_wrap .content_left{width: 25%; height: 300px;float: left;text-align: center;}
-.ms_content_wrap .content_left .profile_pic{margin-top: 17px;position: relative;}
-.ms_content_wrap .content_left .profile_pic:before{content: "";position: absolute;top: 50%;border:1px solid #ffc20e;width: 100%;left: 0px;z-index: -1;}
-.ms_content_wrap .content_left .profile_pic img{width: 164px;height: 164px;border-radius: 50%;border:2px solid #273545;}
-.ms_content_wrap .content_right{width: 75%;/*height: 300px;*/float: left;}
-.ms_content_wrap .content_right h2{margin: 20px 0px;font-size: 25px;}
-.ms_content_wrap .content_right p{padding: 20px 20px 0px 20px;}
-.ms_content_wrap .content_right h3{padding: 20px 0px 10px 20px;}
-.ms_content_wrap .content_right .img_list img{margin-left: 20px;width: 100px;border-radius: 8px;}
+.ms_content_wrap {display: inline-block;width:100%;height: calc(100% - 75px);}
+.ms_content_wrap .content_left{width: 180px; float: left;text-align: center;}
+.ms_content_wrap .content_left .profile_pic{margin-top: 15px;position: relative;}
+.ms_content_wrap .content_left .profile_pic img{width: auto;height: 90px;border-radius: 50%;border:2px solid #273545;}
+.ms_content_wrap .content_right{width: calc(100% - 180px);float: left;}
+.ms_content_wrap .content_right h2{margin: 15px 0px;font-size: 25px;}
+.ms_content_wrap .content_right .ms_menu{position: relative;margin-top: 25px;overflow: hidden;}
+.ms_content_wrap .content_right .ms_menu:before{position: absolute;content: '';border:1px solid #ffc20e;width: 100%;top: 16px; left:20px;}
+.ms_content_wrap .content_right .ms_menu li{display: inline-block;margin-left: 10px;}
 
-.ms_main_wrap .register_block{text-align: center; padding: 10px 0; margin: 0px; ;position: absolute;left: 0px;width: 100%;bottom: 0px;}
-.ms_main_wrap .register_block .ms_btn_re{margin-top: 20px;}
-.ms_main_wrap .register_block b{font-size: 20px;font-weight: normal;line-height: 38px;}
+.ms_content_wrap .ms_content {display: block; width:calc(100%) !important;padding:10px 45px; margin: 0 auto;box-sizing: border-box;height: calc(100% - 120px); overflow: auto; outline: none;} 
+.ms_content_wrap .ms_content p{padding: 0px 0px 20px 0px;}
+.ms_content_wrap .ms_content h3{padding: 20px 0px 10px 0px;}
+.ms_content_wrap .img_list img{margin-right: 20px;width: 100px;border-radius: 8px;}
+
+.ms_main_wrap .footer {text-align: center; padding: 10px 0; margin: 0px; ;position: absolute;left: 0px;width: 100%;bottom: 0px; background:rgba(255, 255, 255, 0.8);}
+.ms_main_wrap .footer .ms_btn_re{margin-top: 15px;}
+.ms_main_wrap .footer  b{font-size: 20px;font-weight: normal;line-height: 38px;}
 
 .ms_btn_ye {display: inline-block; background: #ffc20e; border: 0px; line-height: 31px; position: relative; text-decoration: none; font-size: 15px; height: 34px; min-width: 60px; margin: 0px 12px 0px 12px; color: #000; text-shadow: none; text-align: center; padding: 0px 10px; } 
 .ms_btn_ye:before {position: absolute; left: -12px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 17px 12px 17px 0px; border-color: transparent #ffc20e transparent transparent; top: 0px; } 
@@ -53,23 +57,20 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;}
 .ms_btn_ye.active_menu:before {border-color: transparent #ef4647 transparent transparent;} 
 .ms_btn_ye.active_menu:after {border-color: transparent transparent transparent #ef4647;}
 
-.ms_btn_re {display: inline-block; background: #ef4647; border: 0px; line-height: 31px; position: relative; text-decoration: none; font-size: 15px; height: 34px; min-width: 60px; margin: 0px 12px 0px 12px; color: #fff; text-shadow: none; text-align: center; padding: 0px 10px; } 
-.ms_btn_re:before {position: absolute; left: -12px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 17px 12px 17px 0px; border-color: transparent #ef4647 transparent transparent; top: 0px; } 
-.ms_btn_re:after {position: absolute; right: -12px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 17px 0 17px 12px; border-color: transparent transparent transparent #ef4647; top: 0px; }
+.ms_btn_re {display: inline-block; background: #ef4647; border: 0px; line-height: 20px; position: relative; text-decoration: none; font-size: 13px; height: 23px; min-width: 30px; margin: 0px 12px 0px 12px; color: #fff; text-shadow: none; text-align: center; padding: 0px 5px;}
+.ms_btn_re:before {position: absolute; left: -12px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 11.5px 12px 11.5px 0px; border-color: transparent #ef4647 transparent transparent; top: 0px; }
+.ms_btn_re:after {position: absolute; right: -12px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 11.5px 0 11.5px 12px; border-color: transparent transparent transparent #ef4647; top: 0px; }
 
-.ms_content_wrap .content_right .ms_menu{position: relative;margin-top: 35px;overflow: hidden;}
-.ms_content_wrap .content_right .ms_menu:before{position: absolute;content: '';border:1px solid #ffc20e;width: 100%;top: 16px;}
-.ms_content_wrap .content_right .ms_menu li{display: inline-block;margin-left: 10px;}
-
-.ms_noBranches {display: block; margin: 30px 0 30px 9%; width: 500px;}
+.ms_noBranches {display: block; margin: 30px auto; width: 500px;}
 .ms_noBranches img {display: block; width: 100%; height: auto; border-radius: 8px;}
-.ms_branches {display: block; margin: 30px 0; }
-.ms_content_wrap .branch_block {margin: 10px 20px 10px 0; padding: 10px; text-align: left; width: 45%; display: inline-block; float: left; background-color: #fff; box-shadow: 0px 0px 5px #888; border-radius: 4px; } .ms_content_wrap .branch_block img {float: left; margin-right: 15px; width: 90px; }
+.ms_branches {display: inline-block; width: 100%; margin:0; }
+.ms_content_wrap .branch_block {margin: 10px;padding: 10px;text-align: left;width: calc(50% - 40px);display: inline-block;float: left;background-color: #fff;box-shadow: 0px 0px 5px #888;border-radius: 4px;} .ms_content_wrap .branch_block img {float: left; margin-right: 15px; width: 90px; }
 .ms_content_wrap .branch_block h3 {font-size: 20px; margin-bottom: 5px; padding: 0px; }
 .ms_content_wrap .branch_block p {padding: 0px;} 
 
-.ms_swiper 	{margin: 20px 0; padding: 0 28px; position: relative; width: calc(100% - 100px); box-sizing: border-box;}
-.ms_swiper .swiper-slide img {width: 100%; height: 210px;}
+.ms_swiper 	{margin: 20px 0; padding: 0 28px; position: relative; width: 100%; box-sizing: border-box;}
+.ms_swiper .swiper-slide {width: 235px;}
+.ms_swiper .swiper-slide img {width: 100%; height: 225px;}
 .ms_swiper .swiper-button-prev {left:0px; background-size: 20px auto;}
 .ms_swiper .swiper-button-next	{right: 0px; background-size: 20px auto;}
 .ms_swiper .profile_info { -webkit-transition: all 0.7s ease-in-out; -moz-transition: all 0.7s ease-in-out; -o-transition: all 0.7s ease-in-out; transition: all 0.7s ease-in-out; height: 45px; overflow: hidden; display: block; position: absolute; bottom: 6px; left: 3px; background:rgba(255, 255, 255, 0.90); text-align:center; width:calc(100% - 6px); padding:5px 2px; box-sizing: border-box;}
@@ -78,8 +79,6 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;}
 .ms_swiper .profile_info p  {display: block; -webkit-transition: all 1s ease-in-out; -moz-transition: all 1s ease-in-out; -o-transition: all 1s ease-in-out; transition: all 1s ease-in-out;   opacity: 0; margin: 0px; padding: 0px; height:calc(100% - 38px); padding: 4px 6px 0; text-align: justify; overflow: auto; font-size: 12px; }
 .ms_swiper .profile_info.open p {display: block; opacity: 1}
 .ms_swiper .profile_info.open {height: calc(100% - 9px);}
-.ms_swiper .expand_info	{position: absolute; top:0px; right: 0px; font-size: 25px; cursor: pointer; color: blue; width: 25px;height: 25px;text-align: right;line-height: 19px;border-radius: 0 0 0 20px;box-sizing: border-box;background:#ef4647 url(../images/expand.png) no-repeat 8px center; background-size: 15px auto;}
-.ms_swiper .expand_info.collapse {background:#ef4647 url(../images/collapse.png) no-repeat 8px center; background-size: 15px auto; }
-
-
+.ms_swiper .expand_info	{position: absolute;top:0px;right: 0px;font-size: 25px;cursor: pointer;color: blue;width: 20px;height: 20px;text-align: right;line-height: 19px;border-radius: 0;box-sizing: border-box;background: #ef4647 url(../images/expand.png) no-repeat center;background-size: 10px auto;}
+.ms_swiper .expand_info.collapse {background: #ef4647 url(../images/collapse.png) no-repeat center;background-size: 10px auto;}
 
