--- a/client/stylesheets/css/react-big-calendar.css
+++ b/client/stylesheets/css/react-big-calendar.css
@@ -748,7 +748,7 @@ button.rbc-input::-moz-focus-inner {
   background-position: center;
   border: 1px solid white;
   width: 100%;
-  height: 100%;
+  height: 87px;
 }
 
 .rbc-slot-travel-status {
