--- a/client/stylesheets/login.css
+++ b/client/stylesheets/login.css
@@ -16,12 +16,12 @@
 .login_block_in:before{position:absolute;left:-50px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 104px 50px 104px 0px;border-color: transparent #273545 transparent transparent;top: 0px;}
 
 
-.login_top{    height: 80px;width: 100px;background: #FFC20E;z-index: 1;position: absolute;top: 213px;left: 50%;
+.login_top{    height: 80px;width: 174px;background: #FFC20E;z-index: 1;position: absolute;top: 213px;left: 50%;
   transform: translateX(-50%);color: #fff;text-shadow: none;font-size: 20px;}
 .login_top:after{    position: absolute;right: -30px;content: " ";width: 0px;height: 0px;border-style: solid;border-width: 40px 0 40px 30px;border-color: transparent transparent transparent #FFC20E;top: 0px;}
 .login_top:before{    position: absolute;left: -30px;content: " ";width: 0px;height: 0px;border-style: solid;border-width: 40px 30px 40px 0px;border-color: transparent #FFC20E transparent transparent;top: 0px;}
 
-.login_top_in{height: 74px;width: 98px;background: #273545;z-index: 2;position: absolute;top: 3px;left: 50%;transform: translateX(-50%);}
+.login_top_in{height: 74px;width: 170px;background: #273545;z-index: 2;position: absolute;top: 3px;left: 50%;transform: translateX(-50%);text-align: center;}
 .login_top_in:after{position: absolute;right: -27px;content: " ";width: 0px;height: 0px;border-style: solid;border-width: 37px 0 37px 27px;border-color: transparent transparent transparent #273545;top: 0px;}
 .login_top_in:before{position: absolute;left: -27px;content: " ";width: 0px;height: 0px;border-style: solid;border-width: 37px 27px 37px 0px;border-color: transparent #273545 transparent transparent;top: 0px;}
 
