UI Chart border

--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2343,3 +2343,8 @@ li.sameWorkTime:after {
     border-radius: 0px;
   }
 }
+.chart_bg{
+  background: $mlWhite;
+  border: $mlGray solid 1px;
+  margin-bottom: 25px;
+}
