--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2344,7 +2344,7 @@ li.sameWorkTime:after {
   }
 }
 .chart_bg{
-  background: $mlWhite;border: $mlGray solid 1px;margin-bottom: 25px;position: relative;
+  background: $mlWhite;border: $mlGray solid 1px;margin-bottom: 30px;position: relative;height: 465px;
   .chart_msg{
     position: absolute; background: $mlGray; width: 50%; left: 25%;top: 40%;font-size: 26px; text-align: center;
   }
