--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -38,6 +38,7 @@ html(prefix='og: http://ogp.me/ns#')
     link(href='/css/font-awesome.css', type='text/css', media='all', rel='stylesheet')
     link(href='/css/swiper.min.css', type='text/css', media='all', rel='stylesheet')
   body
+    include analytics
     script.
       window.fbAsyncInit = function () {
         FB.init({
