--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -77,22 +77,23 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;margin: 0px;l
 .admin_main_wrap .admin_padding_wrap{padding: 10px;}
 .no_padding{padding: 0px !important;}
 .map_view_block{height: 100%;width: 100%;}
-.admin_main_wrap .filter{background: #ef4647;width: 28px;height: 30px;position: fixed;right: 0px;text-align: center;line-height: 24px;color: #fff;text-shadow: 0px 1px 1px #000;font-size: 20px;z-index: 4;}
-.admin_main_wrap .filter.alfa_filter{position: absolute; float: left; cursor: pointer; margin-right: 56px;}
-.alfa_pagination{right: -60px;position: fixed;z-index: 2;transition: .5s linear;top: 37%;}
+.admin_main_wrap .filter{background: #ef4647;width: 30px;height: 30px;position: fixed;right: 0px;text-align: center;line-height: 24px;color: #fff;text-shadow: 0px 1px 1px #000;font-size: 20px;z-index: 4;}
+.admin_main_wrap .filter.alfa_filter{position: absolute; float: left; cursor: pointer; margin-right: 56px;font-size: 12px;}
+.admin_main_wrap .filter.alfa_filter .filt_text{font-size: 12px;text-shadow: none;font-weight: bold;padding-right:4px;line-height: 30px;}
+.alfa_pagination{right: -60px;position: fixed;z-index: 3;transition: .5s linear;top: 37%;}
 .alfa_pagination.alfa_pagination_open{right: 0px;}
 .admin_main_wrap .filter.alfa_filter .fa{font-size: 16px;font-weight: normal;}
 .admin_main_wrap .alfa_filter_litters{z-index: 8; background: transparent;width: 56px;float: right;}
 .admin_main_wrap .alfa_filter_litters ul{  }
 /*.admin_main_wrap .alfa_filter_litters ul li{ display: block;float: left; padding: 20px;background: #ef4647;border-right: #f76a6b solid 1px;border-top: #f76a6b solid 1px;border-bottom:#d23738 solid 1px;border-left:#d23738 solid 1px; }*/
-.admin_main_wrap .alfa_filter_litters ul li a{ display: block;float: left;width: 28px;height: 28px; text-align:center;background: #ef4647;border-right: #d43536 solid 1px;border-top: #d43536 solid 1px;border-bottom:#f65354 solid 1px;border-left:#f65354 solid 1px; text-shadow: none;color: #fff;text-transform: lowercase;line-height: 20px;}
-.admin_main_wrap .alfa_filter_litters ul li a:hover{ background: #f65354;text-decoration: none;}
+.admin_main_wrap .alfa_filter_litters ul li a{ display: block;float: left;width: 28px;height: 28px; text-align:center;background: #ef4647;border-right: #d43536 solid 1px;border-top: #d43536 solid 1px;border-bottom:#f65354 solid 1px;border-left:#f65354 solid 1px; text-shadow: none;color: #fff;text-transform: uppercase;line-height: 25px;font-size: 12px;}
+.admin_main_wrap .alfa_filter_litters ul li a:hover, .admin_main_wrap .alfa_filter_litters ul li.active a{ background: #f65354;text-decoration: none;color: #000;}
 .admin_main_wrap .filter.filter_settings{top: 25%;z-index: 8;}
 .admin_main_wrap .filter.alfa_filter ul{height: 30px;overflow: hidden;}
 .admin_main_wrap .filter.alfa_filter li{line-height: 25px;}
 .admin_main_wrap .filter.count{top: 250px;font-size: 14px;}
 .admin_main_wrap .filter.cus_filter{top: 300px;}
-.admin_main_wrap .filter:after {right: 100%;top: 15px;border: solid transparent;content: " ";height: 0;width: 0;position: absolute;pointer-events: none;border-color: rgba(136, 183, 213, 0);border-right-color: #ef4647;border-width: 15px;margin-top: -15px;}
+.admin_main_wrap .filter:after {position:absolute;left:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 10px 15px 0px;border-color: transparent #ef4647 transparent transparent;top: 0px;}
 .view_switch{width: 80px;height: 43px;position: fixed;bottom: 20%;right: 2px;cursor: pointer;z-index: 2;}
 .view_switch.map_view{background: url(../images/map_view.png);}
 .view_switch.list_view{background: url(../images/list_view.png);}
