--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2349,4 +2349,6 @@ li.sameWorkTime:after {
     position: absolute; background: $mlGray; width: 50%; left: 25%;top: 40%;font-size: 26px; text-align: center;
   }
 }
-
+.mselect_icon{
+  margin-top: -50px;margin-right: 35px;
+}
