--- a/client/stylesheets/css/react-big-calendar.css
+++ b/client/stylesheets/css/react-big-calendar.css
@@ -371,7 +371,7 @@ button.rbc-input::-moz-focus-inner {
 }
 
 .rbc-today {
-  background-color: #cbf5e8;
+  background-color: #fdf4f4;
 }
 
 .rbc-toolbar {
@@ -663,7 +663,7 @@ button.rbc-input::-moz-focus-inner {
   z-index: 1;
   left: 0;
   height: 1px;
-  background-color: #74ad31;
+  background-color: #EF4647;
   pointer-events: none;
 }
 
@@ -673,7 +673,7 @@ button.rbc-input::-moz-focus-inner {
   left: -3px;
   top: -3px;
   content: ' ';
-  background-color: #74ad31;
+  background-color: #ef4647;
   border-radius: 50%;
   width: 8px;
   height: 8px;
@@ -759,3 +759,5 @@ button.rbc-input::-moz-focus-inner {
   width: 100%;
   height: 100%;
 }
+
+/*.rbc-current a{background: #ef4647;color: #fff !important;}*/
