Added Space in pug file

--- a/private/microSite/views/about.pug
+++ b/private/microSite/views/about.pug
@@ -157,12 +157,12 @@ html(prefix='og: http://ogp.me/ns#')
         p
           strong
             | To view more details and to collaborate with
-            span.m_red Benjamin Franklin
+            span.m_red #{space} #{displayName}
         a.ms_btn_re(href='/login') Login
-        |  or
+        |  or #{space}
         a.ms_btn_re(href='https://www.moolya.global/register') Register
         b
-          | on #{space}
+          | #{space} on #{space}
           span.m_red m
           span.m_yel oo
           span.m_red lya
