--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2358,3 +2358,4 @@ li.sameWorkTime:after {
     height: 245px;
   }
 }
+.clear_all{position: absolute;right:8px;top:8px;padding:0px 5px;background: $mlGray; color:$mlBlue;border-radius: 5px;font-size: 12px;cursor: pointer}
