--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1110,12 +1110,16 @@ p{margin-top:10px;}
       &.fa-check{
         background: $mlRed;
       }
+      &.fa-minus{
+        background: $mlRed;
+      }
     }
         img{
           width:50px;height:50px;border-radius:50%;border:$mlGray dotted 2px;display:block;
         }
     }
   }
+
 }
 .padding10{padding:10px !important;}
 .conversation-block{
