--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -37,11 +37,11 @@ $menuTrans:all 0.5s linear;
 .marb0{margin-bottom: 0;}
 .moolya_app{transition:$menuTrans;left:0px;position:relative;}
 .moolya_app.slid{position: relative;left: 300px;}
-.app_header{background:#000; height:64px; padding:0px 5px; line-height: 42px; text-align: center; border-top:3px solid $mlRed;
+.app_header{background:#000; height:70px; padding:0px 5px; line-height: 42px; text-align: center; border-top:3px solid $mlRed;
     a{color: $mlRed; font-size: 32px; margin-left: 8px; line-height: 56px;
       &:hover{color: $mlYellow;text-shadow:none;}
     }
-    img.moolya_app_logo{width: 130px; margin-top: 6px; position: absolute; left: calc(50% - 65px); }
+    img.moolya_app_logo{width: 130px; margin-top: 9px; position: absolute; left: calc(50% - 65px); }
     .mobile_menu_trigger{ position: relative;z-index:1;display:none;}
 }
 /*.moolya_app .app_menu{width: 94px;min-height: 400px;padding: 0px;float:left;background: #fff;}*/
@@ -2027,7 +2027,7 @@ p{margin-top:10px;}
   line-height: 18px;
   border-radius: 2px;
   font-size: 12px;
-  margin-top: -13px;
+  margin-top: -9px;
   text-shadow: none;}
 
 .act-btn{
@@ -2362,4 +2362,4 @@ li.sameWorkTime:after {
     height: 245px;
   }
 }
-.clear_all{position: absolute;right:8px;top:8px;padding:0px 5px;background: $mlGray; color:$mlBlue;border-radius: 5px;font-size: 12px;cursor: pointer}
+.clear_all{position: absolute;right:8px;top:8px;padding:0px 5px;background: $mlBlue; color:$mlWhite;border-radius: 3px;font-size: 12px;cursor: pointer}
