Anchor page UI cleanup

--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2363,3 +2363,4 @@ li.sameWorkTime:after {
   }
 }
 .clear_all{position: absolute;right:8px;top:8px;padding:0px 5px;background: $mlBlue; color:$mlWhite;border-radius: 3px;font-size: 12px;cursor: pointer}
+.anchor_tabs{height: 270px;overflow: auto;}
