Moolya Icons Replaced

--- a/client/stylesheets/css/mymoolya-icons.css
+++ b/client/stylesheets/css/mymoolya-icons.css
@@ -14,6 +14,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.my-ml-holiday:before {
+  content: "\ea06";
+}
+.my-ml-travel:before {
+  content: "\ea07";
+}
 .my-ml-add_user:before {
   content: "\e9fa";
 }
