--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2364,3 +2364,9 @@ li.sameWorkTime:after {
 }
 .clear_all{position: absolute;right:8px;top:8px;padding:0px 5px;background: $mlBlue; color:$mlWhite;border-radius: 3px;font-size: 12px;cursor: pointer}
 .anchor_tabs{height: 270px;overflow: auto;}
+
+.top-content.ideators_list .ideators_list_block, .top-content2.ideators_list .ideators_list_block{height:160px; color:#fff;}
+.top-content.ideators_list .ideators_list_block p, .top-content2.ideators_list .ideators_list_block p{font-size:14px;}
+.top-content.ideators_list .ideators_list_block p.small, .top-content2.ideators_list .ideators_list_block p.small{font-size:11px;}
+.top-content.ideators_list .ideators_list_block img, .top-content2.ideators_list .ideators_list_block img{margin-top:25px;}
+.top-content.ideators_list .ideators_list_block .fa, .top-content2.ideators_list .ideators_list_block .fa{font-size:15px; margin:5px;color:#fff;}
