--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -502,7 +502,7 @@ table .switch.on .slider:before {-webkit-transform: translateX(24px);-ms-transfo
 
 
 .chapter_map_hover{position: absolute;z-index: 999;right: -144px;top:0px;}
-.chapter_map_hover_content{border-radius: 0px 10px 10px 10px; background: #000 url("/images/map_details_bg.png") right bottom no-repeat; float: left; box-shadow: 0px 0px 3px 0px rgba(0,0,0,1); width: 144px; padding-bottom: 3px;}
+.chapter_map_hover_content{border-radius: 0px 10px 10px 10px; background: #fff; float: left; box-shadow: 0px 0px 3px 0px rgba(0,0,0,1); width: 144px; padding-bottom: 3px;}
 .chapter_map_hover_content h2{background: #ef4647; margin: 0px; border-radius: 10px 10px 0 0; padding: 2px 0px; color: #fff; text-shadow: none; text-align: center; font-size: 14px;}
 .chapter_map_hover_content ul{padding: 5px 0px 0px 10px}
 .chapter_map_hover_content ul li{width: 30px;margin-bottom: 8px; float: left; margin-right: 14px;height: 30px;position: relative;line-height: 34px;text-align: center;border-radius: 4px;margin-top: 6px;text-shadow: none;color: #FFF;}
