--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -682,10 +682,10 @@ button:focus{outline: 0;}
 .subscriptions_btn .present:before{position:absolute;left:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 10px 15px 0px;border-color: transparent #ef4647 transparent transparent;top: 0px;}
 
 .ml_btn{text-align: right; width: 100%; bottom: 0;font-weight: normal;}
-.ml_btn .save_btn{display: inline-block; background: #ef4647; border: 0px; line-height: 27px; position: relative; text-decoration: none; font-size: 14px; height: 30px; min-width: 60px; margin: 0px 6px 0px 21px;color: #fff;text-shadow: none;text-align: center;}
+.ml_btn .save_btn{display: inline-block; background: #ef4647; border: 0px; line-height: 27px; position: relative; text-decoration: none; font-size: 14px; height: 30px; min-width: 60px; margin: 0px 6px 0px 21px;color: #fff;text-shadow: none;text-align: center;cursor: pointer;}
 .ml_btn .save_btn:after{position:absolute;right:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 0 15px 10px;border-color: transparent transparent transparent #ef4647;top: 0px;}
 .ml_btn .save_btn:before{position:absolute;left:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 10px 15px 0px;border-color: transparent #ef4647 transparent transparent;top: 0px;}
-.ml_btn .cancel_btn{display: inline-block; background: #273545; border: 0px; line-height: 27px; position: relative; text-decoration: none; font-size: 14px; height: 30px; min-width: 60px; margin: 0px 6px 0px 21px; color: #fff; text-shadow: none; text-align: center;}
+.ml_btn .cancel_btn{display: inline-block; background: #273545; border: 0px; line-height: 27px; position: relative; text-decoration: none; font-size: 14px; height: 30px; min-width: 60px; margin: 0px 6px 0px 21px; color: #fff; text-shadow: none; text-align: center;cursor: pointer;}
 .ml_btn .cancel_btn:after{position:absolute;right:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 0 15px 10px;border-color: transparent transparent transparent #273545;top: 0px;}
 .ml_btn .cancel_btn:before{position:absolute;left:-10px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 15px 10px 15px 0px;border-color: transparent #273545 transparent transparent;top: 0px;}
 .ml_icon_btn{text-align: right; width: 100%; bottom: 0;font-weight: bold;margin-top: -10px;}
