--- a/client/stylesheets/css/moolya_app.css
+++ b/client/stylesheets/css/moolya_app.css
@@ -239,3 +239,22 @@ h1{
   background: #fff url(/images/bg.png); }
 
 /*# sourceMappingURL=moolya_app.css.map */
+.list_left{
+  width: 100%;
+  border-left: 4px solid #ef4647;
+  background: #f5f5f5;
+  display: inline-block;
+  padding: 15px 0px;
+}
+.list_left li{
+  float: left;
+  width: 48%;
+  padding: 5px;
+  border-bottom: #333 solid 1px;
+  margin: 0 1%;
+}
+.list_left li .fa{
+  float: right;
+  margin: 5px 20px 0 0;
+  cursor: pointer;
+}
