--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -2370,3 +2370,9 @@ li.sameWorkTime:after {
 .top-content.ideators_list .ideators_list_block p.small, .top-content2.ideators_list .ideators_list_block p.small{font-size:11px;}
 .top-content.ideators_list .ideators_list_block img, .top-content2.ideators_list .ideators_list_block img{margin-top:25px;}
 .top-content.ideators_list .ideators_list_block .fa, .top-content2.ideators_list .ideators_list_block .fa{font-size:15px; margin:5px;color:#fff;}
+
+.hide_unlock{
+.fa-unlock{
+  display: none !important;
+}
+}
